@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-02T08:16:50Z",
-  "count_outdated" : 686,
-  "uniques_outdated" : 387,
-  "count" : 715,
+  "timestamp" : "2022-12-03T01:03:22Z",
+  "count_outdated" : 688,
+  "uniques_outdated" : 388,
+  "count" : 716,
   "uniques" : 402,
   "clones" : [
-    {
-      "timestamp": "2022-11-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-11-19T00:00:00Z",
       "count": 5,
